gcc/testsuite/rust/rustc/ui/issues/issue-12997-1.rs
// compile-flags: --test

//! Test that makes sure wrongly-typed bench functions aren't ignored

#![feature(test)]

#[bench]
fn foo() { } // { dg-error "" "" { target *-*-* } }

#[bench]
fn bar(x: isize, y: isize) { } // { dg-error "" "" { target *-*-* } }

